Second phase implementation done